2008-11-12  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (check-signature): use program_error instead
	of source_program_error for argument count checks because the
	latter requires a DETAIL slot which we do not provide

2008-11-12  Sam Steingold  <sds@gnu.org>

	new module DEFUN keyword: &allow-other-keys
	* utils/modprep.lisp (signature): replace REST-P & KEY-P with REST
	(*valid-signatures*): update
	(parse-signature): accept &allow-other-keys
	(check-signature): output error_key_odd test for &allow-other-keys
	(signature-match, fundef-lispfun, print-tables-2): update
	* modules/clx/new-clx/clx.f (OPEN-DISPLAY, QUEUE-EVENT, SEND-EVENT):
	use &allow-other-keys and update argcount usage: it now counts the
	total number of arguments, not the number of &rest arguments

2008-11-12  Sam Steingold  <sds@gnu.org>

	* modules/gdbm/gdbm.c (GDBM:GDBM-FILE-SIZE): update the
	handle_length call for the 2008-09-13 change

2008-11-12  Philippe Brochard  <hocwp@free.fr>
	Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (XLIB:QUEUE-EVENT): implement
	* modules/clx/new-clx/clx.lisp (QUEUE-EVENT): not UNDEFINED

2008-11-11  Philippe Brochard  <hocwp@free.fr>

	* modules/clx/new-clx/clx.f (SEND-EVENT): fix encode_event() call

2008-11-11  Sam Steingold  <sds@gnu.org>

	* pathname.d (PATH_VALUE, LOG_PATH_VALUE, PATH_SLOT): add macros
	(PATHNAME-HOST, PATHNAME-DEVICE, PATHNAME-DIRECTORY)
	(PATHNAME-NAME, PATHNAME-TYPE): use them

2008-11-11  Sam Steingold  <sds@gnu.org>

	* makemake.in (DEVPREFIX) [cygwin]: restore the definition lost on
	2005-08-29

2008-11-11  Sam Steingold  <sds@gnu.org>

	* cfgsunux.lisp: remove file (suntools users can set *EDITOR*)
	* makemake.in (CONFIG): set to cfg${TOS}

2008-11-09  Sam Steingold  <sds@gnu.org>

	* eval.d (reset): avoid a warning in fprintf

2008-11-09  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): run *INIT-HOOKS* after initializing O(argv) so
	that the application can detect --clisp- options and remove setuid