@@ -1,3 +1,8 @@
+2008-11-17  Sam Steingold  <sds@gnu.org>
+
+	* stream.d (clear_input_terminal2): simplify code
+	(clear_input_terminal3): fix a GC-safety bug
+
 2008-11-12  Sam Steingold  <sds@gnu.org>
 
 	* utils/modprep.lisp (check-signature): use program_error instead
